Updated using local file
many changes, details can be found in the v1.02 Changelog

--- a/data.ini
+++ b/data.ini
@@ -1,12 +1,23 @@
 [UserText]
-TextBank1 =
-TextBank2 =
-TextBank3 =
+TextBank1 =Emailed the Q4 Messages email over to the SCR contact 
+TextBank2 =Thank you for calling Sound Marketing, we are currently closed. Please leave a message, and we'll be in touch when we reopen.
+TextBank3 =Sound Marketing is open from 8:30am to 5pm on weekday, and we are closed on the weekend. Email Sales@soundm.com to arrange a call back at a time that suits you.
+
 [Initials]
 USER =MB
+
 [Version]
-SMVersion =v1.01
+SMVersion =v1.02
 Author =Mike Brown
-Creation =18/12/2019
+Creation =21122020
 Contact =01225 701628
 Email =Mike@soundm.com
+
+[Variable]
+Datetype =1
+
+[Security]
+UserIDToken =fIYJMSWGgGeZi8V6
+CurrentToken =C0zdSbq1IPxXLTnQ
+Server Address =43 30 7a 64 53 62 71 31 49 50 78 58 4c 54 6e 51 0d 0a 79 39 7a 38 66 42 52 76 43 69 6c 41 43 76 46 6e 0d 0a 54 32 39 42 63 5a 49 34 69 50 52 47 42 6d 6a 57 0d 0a 53 65 59 4f 4a 46 52 33 48 33 48 4e 6e 45 70 45 0d 0a 6d 51 76 65 67 52 6b 76 44 43 62 35 30 44 75 7a 0d 0a 4c 38 79 73 61 7a 66 32 76 59 44 34 43 48 4a 79 0d 0a 32 68 62 51 74 6b 57 69 76 65 7a 59 69 4d 38 59 0d 0a 79 53 54 41 37 66 61 6c 79 41 7a 66 4c 58 51 37 0d 0a 6a 70 6c 67 46 33 58 71 6b 30 52 30 6e 51 38 6b 0d 0a 35 68 78 74 76 47 5a 54 38 73 76 50 6b 65 77 35
+TimeFrame =0y1m0d
